@@ -1,3 +1,6 @@
+[B]2.6.4[/B]
+Changed: tighten search query and trust musicbrainz results sorting
+
 [B]2.6.3[/B]
 Fixed: AMGData
 
